# computerVisionSolutions

./: README.md  plyToPcd.py
NARFTool/: CMakeLists.txt  NARFTool.cpp
cropboxTool/: cropboxTool.cpp
cylinderSegmentation/: CMakeLists.txt  cylinderSegmentation.cpp
downsampleTool/: CMakeLists.txt  downsampleTool.cpp
findSegments/: CMakeLists.txt  findSegments.cpp
folderPlyToPcd/: CMakeLists.txt  folderPlyToPcd.cpp
noiseRemovalTool/: CMakeLists.txt  noiseRemovalTool.cpp
normalsCropboxTest/: CMakeLists.txt  cropboxTool.cpp
openmp/: CMakeLists.txt
passThroughFilter/: CMakeLists.txt  passThroughFilter.cpp
pcdReaderCenterAdding/: CMakeLists.txt  pcdReaderCenterAdding.cpp
pcdToPly/: CMakeLists.txt  pcdToPly.cpp
pclToImage/: CMakeLists.txt  pclToImage.cpp
plyReader/: CMakeLists.txt  plyReader.cpp
sphereSegmentation/: CMakeLists.txt  sphereSegmentation.cpp
svdCalibration/: CMakeLists.txt  svdCalibration.cpp
templateMatching/: CMakeLists.txt  templateMatching.cpp
translateTool/: CMakeLists.txt  translateTool.cpp  wrongPcdFile.pcd
translationRotationFinder/: CMakeLists.txt  translationRotationFinder.cpp
